--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,23 @@
 namenode:
-    image: gelog/hadoop
+    image: marmot007/spark-docker
     ports: 
         - "50070:50070"
+        - "9000:9000"
+        - "8020:8020"
     command: hdfs namenode
     hostname: hdfs-namenode
 
 datanode:
-    image: gelog/hadoop
+    image: marmot007/spark-docker
     command: hdfs datanode
     ports:
 # The host port is randomly assigned by Docker, to allow scaling to multiple DataNodes on the same host
-        - "50075"
+        - "50075:50075"
     links:
         - namenode:hdfs-namenode
 
 secondarynamenode:
-    image: gelog/hadoop
+    image: marmot007/spark-docker
     command: hdfs secondarynamenode
     ports:
         - "50090:50090"
