--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,26 @@
-spark-master:
+version: '2'
+services:
+  spark-master:
     image: robingu/spark
     ports: 
         - "8080:8080"
         - "7077:7077"
-    command: start-master.sh && tail -f /opt/spark/logs/*.out
+    environment:
+        SPARK_MASTER_HOST: spark-master 
+    volumes:
+        - logs:/opt/spark/logs
+    command: ["bin/spark-class", "org.apache.spark.deploy.master.Master"]
     hostname: spark-master
 
-spark-slave:
+  spark-slave:
     image: robingu/spark
-    command: start-slave.sh spark://127.0.0.1:7077 && tail -f /opt/spark/logs/*.out 
-    #ports:
+    depends_on:
+        - spark-master
+    volumes:
+        - logs:/opt/spark/logs
+    command: ["bin/spark-class", "org.apache.spark.deploy.worker.Worker","spark://spark-master:7077"]
     links:
-        - spark-master:spark-master
+        - spark-master
 
     #secondarynamenode:
     #    image: robingu/spark-docker
